--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -135,7 +135,7 @@
                                         <a href="#"><img width="200" src="{{asset('assets/utils/images/Calque -1.png')}}"   alt=""></a>
                                     </div>
                                     <div class="gdlr-core-personnel-list-content-wrap">
-                                        <h3 class="gdlr-core-personnel-list-title" style="font-weight: 800;"><a href="#">2.PROTÉGER ET REGÉNERER</a></h3>
+                                        <h3 class="gdlr-core-personnel-list-title" style="font-weight: 800;"><a href="#">2.PROTÉGER ET RÉGÉNÉRER</a></h3>
                                         <p class="font-weight-bold">Crème de jour hydratante Anti-pollution </p>
                                         <div class="gdlr-core-personnel-list-position gdlr-core-info-font gdlr-core-skin-caption my-font-regular" style="font-size: 15px;font-style: normal;">
                                             Crème visage au beurre de Karité, acide hyaluronique, huile précieuse de Baobab et extraits de Moringa pour protéger, détoxifier et régénérer la peau au quotidien.
@@ -149,7 +149,7 @@
                                         <a href="#"><img width="200" src="{{asset('assets/utils/images/Calque -3.png')}}"   alt=""></a>
                                     </div>
                                     <div class="gdlr-core-personnel-list-content-wrap">
-                                        <h3 class="gdlr-core-personnel-list-title" style="font-weight: 800;"><a href="#">3. DEMAQUILLER ET CHOUCHOUTER </a></h3>
+                                        <h3 class="gdlr-core-personnel-list-title" style="font-weight: 800;"><a href="#">3. DÉMAQUILLER ET CHOUCHOUTER </a></h3>
                                         <p class="font-weight-bold">Huile Botanique Démaquillante </p>
                                         <div class="gdlr-core-personnel-list-position gdlr-core-info-font gdlr-core-skin-caption my-font-regular" style="font-size: 15px;font-style: normal;">
                                             Garantit un démaquillage doux et efficace, tout en apportant un soin botanique grâce à sa sélection d’huiles de Coco, de Jojoba et de Moringa.
